--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@auth0/auth0-angular": "^1.11.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
     "multer-s3": "^2.10.0",
