--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@auth0/auth0-angular": "^1.11.1",
+    "@ngxs/store": "^3.7.6",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
     "multer-s3": "^2.10.0",
