--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@auth0/auth0-angular": "^1.11.1",
+    "@aws-amplify/ui-angular": "^3.2.10",
     "@ngxs/store": "^3.7.6",
+    "aws-amplify": "^5.0.18",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
     "multer-s3": "^2.10.0",
