--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@auth0/auth0-angular": "^1.11.1",
     "@aws-amplify/ui-angular": "^3.2.10",
     "@ngxs/store": "^3.7.6",
+    "@stripe/stripe-js": "^1.52.0",
     "aws-amplify": "^5.0.18",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
     "multer-s3": "^2.10.0",
+    "ngx-stripe": "^15.6.0",
     "rxjs": "~7.5.0",
+    "stripe": "^12.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
