--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^14.2.0",
     "@auth0/auth0-angular": "^1.11.1",
     "@aws-amplify/ui-angular": "^3.2.10",
+    "@datorama/akita": "^8.0.1",
+    "@datorama/akita-ng-entity-service": "^8.0.0",
     "@ngxs/store": "^3.7.6",
     "aws-amplify": "^5.0.18",
     "bootstrap": "^5.2.3",
@@ -35,6 +37,8 @@
     "@angular-devkit/build-angular": "^14.2.8",
     "@angular/cli": "~14.2.8",
     "@angular/compiler-cli": "^14.2.0",
+    "@datorama/akita-ngdevtools": "^7.0.0",
+    "@ngrx/schematics": "^15.4.0",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
