--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@datorama/akita-ngdevtools": "^7.0.0",
     "@ngrx/schematics": "^15.4.0",
     "@types/jasmine": "~4.0.0",
+    "jasmine": "^4.6.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
